--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
+* {
+  box-sizing: border-box;
+}
+
 button {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
 }
 
 .container {
   display: flex;
-  border: 1rem black;
-  width: 500px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.display {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 50px;
+  padding-right: 15px;
 }
 
 .button-group {
-  display: flex;
-}
-
-.bottom-row {
   display: flex;
 }
 
